@@ -1,5 +1,14 @@
 2013-01-11  Anthony Green  <green@moxielogic.com>
 
+	* src/powerpc/ffi_darwin.c (ffi_prep_args): Replace // style
+	comments with /* */ for xlc compiler.
+	* src/powerpc/aix.S (ffi_call_AIX): Ditto.
+	* testsuite/libffi.call/ffitest.h (allocate_mmap): Remove inline
+	for xlc compiler.
+	* README: Add update for AIX support.
+
+2013-01-11  Anthony Green  <green@moxielogic.com>
+
 	* configure.ac: Robustify pc relative reloc check.
 	* m4/ax_cc_maxopt.m4: Don't -malign-double.  This is an ABI
 	changing option for 32-bit x86.
